# rust-microservice-study

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
certs/: localhost-key.pem  localhost.pem
docker/: Dockerfile.rust
rust-microservice-study-auth/: Cargo.toml  README.md
rust-microservice-study-auth/src/: main.rs
rust-microservice-study-core/: Cargo.toml  README.md
rust-microservice-study-core/src/: lib.rs  prelude.rs
rust-microservice-study-core/src/tracing/: mod.rs  prelude.rs
rust-microservice-study-sqlx/: Cargo.toml  README.md
rust-microservice-study-sqlx/src/: lib.rs  manager.rs  prelude.rs
rust-microservice-study-web/: Cargo.toml  README.md
rust-microservice-study-web/src/: application.rs  main.rs  prelude.rs
