[package]
edition = "2021"
name    = "rust-microservice-study-core"
version = "0.1.0"

[dependencies]
derive_more      = "0.99"
dotenv           = "0.15"
futures          = "0.3"
once_cell        = "1.8"
serde_json       = "1"
thiserror        = "1"
tracing          = "0.1"
tracing-appender = "0.2"
tracing-futures  = "0.2"


[dependencies.serde]
features = ["derive"]
version  = "1"

[dependencies.time]
features = ["serde-human-readable"]
version  = "0.3"

[dependencies.tracing-subscriber]
features = ["local-time", "json"]
version  = "0.3"

[dependencies.tokio]
features = ["full"]
version  = "1.14"

[dependencies.uuid]
features = ["v4"]
version  = "1.0.0-alpha.1"
